[tool.poetry]
name = "renovate-a"
version = "0.1.0"
description = ""
authors = ["Brian"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
renovate-b = { path = "deps/", optional = true, develop = true }
fastapi = { version = "^0.110.0", optional = true }
pytest = {version = "7.4.3", optional = true}

#[package.source]
#type = "directory"
#url = "deps/renovate-b"
